--- a/EECS126/lectures.tex
+++ b/EECS126/lectures.tex
@@ -14,4 +14,5 @@
     \include{./Lectures/lecture9.tex}
     \include{./Lectures/lecture10.tex}
     \include{./Lectures/lecture11.tex}
+    \include{./Lectures/lecture12.tex}
 \end{document}
