--- a/EECS126/lectures.tex
+++ b/EECS126/lectures.tex
@@ -15,4 +15,5 @@
     \include{./Lectures/lecture10.tex}
     \include{./Lectures/lecture11.tex}
     \include{./Lectures/lecture12.tex}
+    \include{./Lectures/lecture13.tex}
 \end{document}
