--- a/CS170/lectures.tex
+++ b/CS170/lectures.tex
@@ -15,4 +15,6 @@
     \include{./Lectures/lecture11.tex}
     \include{./Lectures/lecture12.tex}
     \include{./Lectures/lecture13.tex}
+    \include{./Lectures/lecture14.tex}
+    \include{./Lectures/lecture15.tex}
 \end{document}
