--- a/EECS126/Lectures/lecture13.tex
+++ b/EECS126/Lectures/lecture13.tex
@@ -66,7 +66,7 @@ Here is another way to think of Poisson Processes; you can simulate them two way
 \end{itemize}
 
 The second way comes from the fact that the ordered arrival times between $0$ to $t$
-have uniform density $f(t_1, t_2, \dots, t_n) = \frac{n!}{t^n}$ (thus unordered ones are uniform with probability $\frac{1}{t^n}$).
+have uniform density $f(t_1, t_2, \dots, t_n \mid N_{t} = n) = \frac{n!}{t^n}$ (thus unordered ones are uniform with probability $\frac{1}{t^n}$).
 
 \subsubsection{Continuous Time Markov Chains}
 We begin again with the definition.
