--- a/CS170/lectures.tex
+++ b/CS170/lectures.tex
@@ -18,4 +18,5 @@
     \include{./Lectures/lecture14.tex}
     \include{./Lectures/lecture15.tex}
     \include{./Lectures/lecture16.tex}
+    \include{./Lectures/lecture17.tex}
 \end{document}
