--- a/EECS126/lectures.tex
+++ b/EECS126/lectures.tex
@@ -19,4 +19,5 @@
     \include{./Lectures/lecture14.tex}
     \include{./Lectures/lecture15.tex}
     \include{./Lectures/lecture16.tex}
+    \include{./Lectures/lecture17.tex}
 \end{document}
