--- a/EECS126/Lectures/lecture17.tex
+++ b/EECS126/Lectures/lecture17.tex
@@ -42,7 +42,7 @@ Intuitively, Little's law is just saying the average occupancy is equal to the a
 \begin{definition}[Jackson Networks]
     Consider some network of $J$ $(\cdot/M/1)$ queues. External arrivals occur according to independent Poisson processes with rate $\gamma_i$ into queue $i$.
     Service time at queue $i$ according to independent exponential distrbituion with rate $\mu_i$. When a customer leaves queue $i$, independent of the past,
-    they join queue $j$ with probability $r(i, j)$ and leaves the network with probability $1 - \sum_{j = 1}^J r(i, j)$.
+    they join queue $j$ with probability $r(i, j)$ and leaves the network with probability $1 - \sum_{j = 1}^J r(i, j)$. (Each node acts as a $\cdot/M/1$ queue).
 
     Let $\lambda_i$ be the total rate into a state $i$. By flow conservation, total arrival rate into queue $i$ is given by
     \[ \lambda_i = \gamma_i + \sum_{j = 1}^J \lambda_j r(j, i) \]
@@ -106,7 +106,7 @@ We have now a collection about CTMC and Poisson Process facts.
     Suppose inter-event times are IID non-negative RVs $X_i, i = 1, 2, \dots$ with PDF $f(x)$ and CDF $F(x)$ and $i$th moment $m_i$
     for $i = 1, 2, \dots$. Suppose after the process has been running for a long time, an observer arrives at an arbitrary time.
     \begin{itemize}
-        \item The inter-event time during which the observer arrives has the PDF $\frac{xf(x)}{m_1}$ (the bus interval the observer came). This means its expectation is $\frac{m_2}{m_1}$.
+        \item The inter-event time during which the observer arrives has the PDF $\frac{xf(x)}{m_1}$ (the length of the bus interval). This means its expectation is $\frac{m_2}{m_1}$.
         
         \item The residual time to the next event (time I have to wait for the bus) and age time
         (how long ago the last bus came) from the last event both have the PDF:
@@ -117,6 +117,24 @@ We have now a collection about CTMC and Poisson Process facts.
     Note that you're more likely to fall in an interval that's bigger rather than smaller; it scales linearly with the PDF by the theorem.
     Furthermore, the probability that the residual time lies in some interval $(y, y + dy)$ is just $\frac{\dd{y}}{x}$ where $x$ is the length of the bus interval.
     Multiplying by the PDF and integrating via total probability rule gives our result.
+\end{theorem}
+
+\begin{theorem}[Sum of independent RVs]
+    Consider random vairables $X$ and $Y$. Then:
+    \[ f_Z(z) = \int_{-\infty}^{\infty} f_X(x) f_Y(z - x) \dd{x} \]
+    i.e. $f_Z$ is the convolution of the two. Furthermore, for characteristic functions,
+    \[ \phi_Z(u) = \phi_X(u) \phi_Y(u) \]
+\end{theorem}
+
+\begin{theorem}
+    The sum of IID $\Expo{\empty}{\lambda}$ has the Erlang Distribution.
+    \[ Z \sim \Gamma(n, \lambda); f_Z(z) = \frac{\lambda^n z^{n - 1} e^{-\lambda z}}{(n - 1)!} \]
+    where $z \geq 0$.
+\end{theorem}
+
+\begin{theorem}[Poisson Splitting/Thinning]
+    Let $N(t)$ be a Poisson process with rate $\lambda$. Each arrival is included in the process $N_1(t)$ if an indpendent $\Bern{X}{p}$ coin flip results in heads,
+    otherwise it's included in $N_2(t)$. Then, $N_1(t)$ and $N_2(t)$ are independent Poisson processes with rates $\lambda p$ and $\lambda ( 1- p)$, respectively.
 \end{theorem}
 
 \begin{theorem}[Poisson Merging]
