Added eecs126 lec19

--- a/EECS126/Lectures/lecture18.tex
+++ b/EECS126/Lectures/lecture18.tex
@@ -124,3 +124,5 @@ This is how we constructed the code. The code is prefix tree because all codewor
 \begin{theorem}
     The Huffman Code has the smallest average number of bits per symbol among all prefix-free codes.
 \end{theorem}
+
+We will see next lecture why this is the case.
