--- a/EECS126/lectures.tex
+++ b/EECS126/lectures.tex
@@ -21,4 +21,5 @@
     \include{./Lectures/lecture16.tex}
     \include{./Lectures/lecture17.tex}
     \include{./Lectures/lecture18.tex}
+    \include{./Lectures/lecture19.tex}
 \end{document}
