--- a/CS170/lectures.tex
+++ b/CS170/lectures.tex
@@ -19,4 +19,6 @@
     \include{./Lectures/lecture15.tex}
     \include{./Lectures/lecture16.tex}
     \include{./Lectures/lecture17.tex}
+    \include{./Lectures/lecture18.tex}
+    \include{./Lectures/lecture19.tex}
 \end{document}
