--- a/CS170/lectures.tex
+++ b/CS170/lectures.tex
@@ -21,4 +21,5 @@
     \include{./Lectures/lecture17.tex}
     \include{./Lectures/lecture18.tex}
     \include{./Lectures/lecture19.tex}
+    \include{./Lectures/lecture20.tex}
 \end{document}
