--- a/EECS126/lectures.tex
+++ b/EECS126/lectures.tex
@@ -23,4 +23,5 @@
     \include{./Lectures/lecture18.tex}
     \include{./Lectures/lecture19.tex}
     \include{./Lectures/lecture20.tex}
+    \include{./Lectures/lecture21.tex}
 \end{document}
