--- a/CS170/Lectures/lecture20.tex
+++ b/CS170/Lectures/lecture20.tex
@@ -100,7 +100,7 @@ We state that there is a reduction from 3DM to ZOE.
 Now, we discuss integral linear programming, which is linear programming with added integrality constraints (require some variables to be integers).
 The decision problem writes:
 \begin{align*}
-    \exists x? c^T &\geq k \\
+    \exists x\text{? } c^Tx &\geq k \\
     Ax &\leq b \\
     \forall i \in S, &x_i \in \mathbb{Z}
 \end{align*}
